application-manifests/02-task-management/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: task-management
  namespace: apps
  labels:
    app: task-management
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: task-management
