application-manifests/02-task-management/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-management
  namespace: apps
  labels:
    app: task-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: task-management.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-management
            port:
              number: 3000
